--- a/ChromeExtensionTest/style.css
+++ b/ChromeExtensionTest/style.css
@@ -1,8 +1,68 @@
 h3 {
-    color:rgb(35, 123, 106);
+    color:rgb(0, 0, 0);
     text-align: center;
     background-color: rgb(167, 246, 227);
     border-radius: 5px;
-    border: 2px solid #0f5b40;
     padding: 5px 5px;
+    border: 7px ridge rgb(13, 191, 69);
+    font-size: 14px;
+    font-weight: bold;
+    text-shadow: 0 0 20px 5px rgb(7, 1, 1);
+    box-shadow: 0 0 10px 5px #333;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+body{
+    background-image: url(geometric-back.jpeg);
+    background-size: cover;
+    text-transform: full-width;
+}
+
+p{  /* texto */
+    margin: 5px 10px;
+    color:rgb(0, 0, 0);
+    font-family: monospace;
+    background-attachment: scroll;
+    border: 3px ridge rgb(13, 191, 69);
+    font-size: 15px;
+    font-weight: bold;
+    text-shadow: 0 0 20px 5px rgb(7, 1, 1);
+    box-shadow: 0 0 10px 5px #333;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+
+
+
+div{  /* Opciones de seguridad */
+    color:rgb(0, 0, 0);
+    font-family: monospace;
+    font-size: 13px;
+    font-weight: bold;
+    border: 3px ridge rgb(13, 191, 69);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+
+input{  /* Input checkbox */
+    color:rgb(0, 0, 0);
+    font-family: monospace;
+    font-size: 12px;
+    font-weight: bold;
+    border: 3px ridge rgb(13, 191, 69);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+}
+
+button{ /* boton de acceso */
+    margin-left: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
 }
